# shapely

./: Dockerfile  cloud_run_hello.cc  deploy.sh  vcpkg.json
backend/: CMakeLists.txt  Dockerfile  download_dependencies.sh  shapely.cc
client/: package-lock.json
